# Vakanse_TGBot

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  manage_bot.sh  pyproject.toml  quick-start.sh  requirements.txt  setup_project.sh
app/: __init__.py  bot.py  config.py  main.py  models.py  parser.py
scripts/: dev-setup.sh  start.sh
tests/: test_config.py  test_models.py
