[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vakanse-tgbot"
version = "1.0.0"
description = "Telegram bot for job vacancies"
authors = [{name = "Your Name", email = "your.email@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.22.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.10.0",
    "apscheduler==3.10.4",
    "attrs==25.3.0",
    "beautifulsoup4==4.13.5",
    "certifi==2025.8.3",
    "charset-normalizer==3.4.3",
    "click==8.2.1",
    "fastapi==0.116.1",
    "frozenlist==1.7.0",
    "h11==0.16.0",
    "idna==3.10",
    "lxml==6.0.1",
    "magic-filter==1.0.12",
    "multidict==6.6.4",
    "propcache==0.3.2",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "python-dotenv==1.0.1",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "starlette==0.47.3",
    "typing-inspection==0.4.1",
    "typing_extensions==4.15.0",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "yarl==1.20.1",
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "flake8==7.0.0",
    "mypy==1.9.0",
    "isort==5.13.2",
    "pre-commit==3.7.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.24.0",
    "pytest-cov==5.0.0",
    "types-requests==2.32.4.20250809",
    "types-beautifulsoup4==4.12.0.20240229",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app"]
known_third_party = ["aiogram", "fastapi", "uvicorn", "requests", "bs4", "apscheduler"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "aiogram.*",
    "apscheduler.*",
    "bs4.*",
    "lxml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
